--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pako": "github:onecodex/pako#master",
     "save-svg-as-png": "^1.4.6",
     "vue-faq-accordion": "^1.2.1",
-    "vue-fullscreen": "^2.1.3"
+    "vue-fullscreen": "^2.1.3",
+    "vue-tour": "^1.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
