--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "@gmod/bgzf-filehandle": "^1.2.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "d3": "^5.5.0",
     "d3-tip": "^0.9.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "file-saver": "^1.3.8",
+    "file-saver": "^2.0.1",
     "html2canvas": "^1.0.0-alpha.12",
     "interval-tree-type": "^1.0.1",
     "js-priority-queue": "^0.1.5",
     "json2csv": "^4.2.1",
-    "nuxt": "^1.0.0",
+    "nuxt": "^2.4.5",
     "pako": "github:onecodex/pako#master",
     "save-svg-as-png": "^1.4.6",
     "vue-faq-accordion": "^1.2.1",
@@ -39,11 +39,11 @@
     "vue-tour": "^1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0"
   }
