--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "local": "URL_API='http://localhost' npm run serve",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "serve": "node --max-old-space-size=3072 ./serve.js",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "upload": "npm run generate --spa; ./upload.sh"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
